# sideprojects-py

./: .gitattributes  .gitignore  .output.txt  CLAUDE.md  IBKR_CSV_to_PKL_Converter.py  LICENSE  PullAllDoltDatabases.ps1  README.md  SmokeTestWindow.py  TSLA.pkl  Tradelog.sln  all_imports.txt  pyproject.toml  requirements.txt  resume.sh
.aiassistant/rules/: backend_net.md
.claude/: settings.local.json
.claude/commands/: architect.md  dev.md  developer.md  investor.md  reqeng.md  researcher.md  reviewer.md  trader.md  writer.md
.claude/rules/: python-finance.md  research.md  tradelog.md
10958/: test.py
Abfuhrkalender/: Abfuhrkalender_Hildesheim.ics  Cleaned_Abfuhrkalender.ics  parse-and-convert.py
BusinessDays/: days.py
DAV/: DAV.csv  dav_eval.py
ProjectEuler/: 1-10.py
admin/: README.md  install-environment.ps1  install-packages.ps1
docs/: ARCH-ANALYST.md  SETUP-GMAIL-API.md
download_m3u8/: download.py
finance/: BACKLOG-ANALYST.md  BACKLOG-ASSISTANT.md  BACKLOG-EXECUTION.md  BACKLOG.md  ECB_Interest.csv  US_Interest.csv  avg_sig_change_strategy.py  backtesting_ibkr_part1.py  bracket_strategy_evaluation.py  docoyo_portfolio.py  ema_strategy.py  etf_symbols.csv  ib_async_test.py  ib_data_gathering.py  ib_options_gex.py  ib_scanner.py  in_out_strategy.py  log_strategy.py  options_data_evaluation.py  options_yahoo.py  profitable_strategy.py  readme.md  school_run_evaluation.py  stock_data_evaluation.py  stock_strategy_execution.py  testing-strategies.py  utils.py  yf_options_data.py
finance/apps/: __init__.py  (+4 more)
interesting/: skim.py
investing_framework/: BACKLOG-BACKTESTING-HOLD.md  BACKLOG-BACKTESTING.md  BACKLOG-RESEARCH.md  BARCHART_DATA_FIELDS.html  BarchartScreeners.md  BreakoutStrategy.md  DashboardProfitMechanismMap.md  Daytrading (Automated)_orig.md  DaytradingPlaybook.md  ForexPlaybook.md  Investing.md  InvestingPlaybook.md  Options Strategies.md  OptionsStrategyReference.md  PortfolioAssessment.md  PortfolioPlaybook.md  ScoringSystem.md  StrategyIdeasAssessment.md  Swing trading research_orig.md  Trade_Ideas.md  Trading rulebook.md  TradingJourney.md  TradingPlaybook.md  Trading_new.md  Trading_orig.md
queries/: optimize disc_change.sql
timer/: candleTimer.py
tradelog/: BACKLOG-v2.md  BACKLOG.md  BackendNet.sln  Portfolio-Tracking 2026.sql  Portfolio-Tracking 2026.xlsx  SPEC.md  Tradelog.sln  U16408041_U16408041_20250401_20260331_AF_1454682_5be4546c193fa017a77655d3ba1af7b3.xml  build.ps1  extract_xlsx_to_sql.py  import-options-history.sql  import_from_xlsx.py  reset-account-data.sql
(+645 files in other folders)
