[project]
name = "sideprojects-py"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.96.0",
    "blackscholes>=0.2.0",
    "bokeh==3.8.2",
    "fastparquet==2025.12.0",
    "google-api-python-client>=2.194.0",
    "google-auth-oauthlib>=1.3.1",
    "ib-async>=2.1.0",
    "influxdb>=5.3.2",
    "ipython==9.9.0",
    "kaleido>=1.2.0",
    "lightweight-charts>=2.1",
    "matplotlib>=3.10.8",
    "mplfinance>=0.12.10b0",
    "nbformat==5.10.4",
    "networkx>=3.6.1",
    "numpy==2.4.1",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.3.260113",
    "plotly==6.5.1",
    "pyarrow>=23.0.1",
    "pymysql>=1.1.2",
    "pyqt6==6.10.2",
    "pyqtgraph==0.14.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy-stubs==1.17.0.0",
    "seaborn>=0.13.2",
    "sns>=0.1",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["finance/tests"]
